[FIX] sap.m.NotificationListBase: Focus contrast ratio is now sufficient
The focus outline in Belize theme is now made of
alternating light and dark dots, to make it fit the contrast
ratio requirements.

BCP: 1970268292

--- a/src/themelib_sap_belize/src/sap/m/themes/sap_belize/NotificationListBase.less
+++ b/src/themelib_sap_belize/src/sap/m/themes/sap_belize/NotificationListBase.less
@@ -23,3 +23,32 @@
     }
   }
 }
+
+// Focus Styles ========================================================================================================
+
+html.sap-desktop .sapMNLB:focus::before {
+	border-left-style: solid;
+}
+
+html.sap-desktop .sapMNLB:focus::after {
+	content: "";
+	border-left: 1px dotted @sapUiContentContrastFocusColor;
+	position: absolute;
+	top: 1px;
+	right: 1px;
+	bottom: 1px;
+	left: 1px;
+	z-index: 2;
+	pointer-events: none;
+}
+
+html[data-sap-ui-browser^="ie"].sap-desktop,
+html[data-sap-ui-browser^="ed"].sap-desktop {
+	.sapMNLB:focus::before {
+		border-style: dashed;
+		border-left-style: solid;
+	}
+	.sapMNLB:focus::after {
+		border-left-style: dashed;
+	}
+}
